// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`passes down custom styles 1`] = `
<SkeletonContainerItemWrapper>
  <SkeletonIconWrapper>
    <styled.div
      color="currentColor"
      size="medium"
      weight="normal"
    />
  </SkeletonIconWrapper>
  <HiddenWhenCollapsed
    isCollapsed={false}
  >
    <SkeletonContainerItemText
      textWidth="100%"
    />
  </HiddenWhenCollapsed>
</SkeletonContainerItemWrapper>
`;

exports[`renders a skeleton representation of a container item 1`] = `
<SkeletonContainerItemWrapper>
  <SkeletonIconWrapper>
    <styled.div
      color="currentColor"
      size="medium"
      weight="normal"
    />
  </SkeletonIconWrapper>
  <HiddenWhenCollapsed
    isCollapsed={false}
  >
    <SkeletonContainerItemText />
  </HiddenWhenCollapsed>
</SkeletonContainerItemWrapper>
`;

exports[`shows a compact version when collapsed 1`] = `
<SkeletonContainerItemWrapper>
  <SkeletonIconWrapper>
    <styled.div
      color="currentColor"
      size="medium"
      weight="normal"
    />
  </SkeletonIconWrapper>
  <HiddenWhenCollapsed
    isCollapsed={true}
  >
    <SkeletonContainerItemText />
  </HiddenWhenCollapsed>
</SkeletonContainerItemWrapper>
`;
